# dognes

./: .gitignore  Cargo.toml  README.md
cartridge/: Cargo.toml
cartridge/src/: lib.rs
cpu/: Cargo.toml
cpu/src/: addressing.rs  clock.rs  counter.rs  cpu.rs  lib.rs  memory.rs  nes.rs  nestest.rs  opcodes.rs
cpu/src/cpu/: adc.rs  and.rs  asl.rs  bcc.rs  bcs.rs  beq.rs  bit.rs  bmi.rs  bne.rs  bpl.rs  brk.rs  bvc.rs  bvs.rs  clc.rs  cld.rs  cli.rs  clv.rs  cmp.rs  cpx.rs  cpy.rs  dec.rs  dex.rs  dey.rs  eor.rs  inc.rs  inx.rs  iny.rs  jmp.rs  jsr.rs  lda.rs  ldx.rs  ldy.rs  lsr.rs  nop.rs  ora.rs  pha.rs  php.rs  pla.rs  plp.rs  rol.rs  (+16 more)
mappers/src/: lib.rs
mappers/src/plane0/: ines_000.rs  mod.rs
ppu/: Cargo.toml
ppu/src/: lib.rs
src/: main.rs  nes.rs
