workspace = { members = ["cartridge", "cpu", "mappers"] }
[package]
name = "n"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpu = { path = "cpu/" }
mappers = { path = "mappers/" }
cartridge = { path = "cartridge/" }
raylib = "3.7.0"
