workspace = { members = ["cartridge", "cpu", "mappers", "ppu"] }
[package]
name = "n"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "3.7.0"
cpu = { path = "cpu/" }
cartridge = { path = "cartridge/" }
rand = "0.8.5"
