[package]
name = "cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emulator_6502 = { version = "1.1.0", features = [
    "implementation_transparency",
] }
bitflags = "2.4.2"
once_cell = "1.19.0"
mappers = { path = "../mappers/" }
cartridge = { path = "../cartridge/" }
ppu = { path = "../ppu/" }
